--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,12 @@
 body {
-  background-image: url(https://i.ytimg.com/vi/Z0FR2e8Rt-c/maxresdefault.jpg)} 
+  background-image: url(https://i.ytimg.com/vi/Z0FR2e8Rt-c/maxresdefault.jpg)}
+  
+.aboutPic{
+  background-image: url(https://ksr-ugc.imgix.net/assets/011/655/381/c66472759388df1ae450be34be488a75_original.jpg?ixlib=rb-2.1.0&crop=faces&w=1552&h=873&fit=crop&v=1463686329&auto=format&frame=1&q=92&s=ba0c15579b73ac3f964d3ff815fb408a);
+
+  height: 50vh;
+
+
+
+
+}
